20251122_daily_arXiv_update

--- a/arxiv/2025_11_arxiv.html
+++ b/arxiv/2025_11_arxiv.html
@@ -109,6 +109,93 @@
 <p class="p1"><a href="https://arxiv.org/abs/2511.05465">https://arxiv.org/abs/2511.05465</a> Helios: A 98-qubit trapped-ion quantum computer *****</p>
 <p class="p1"><a href="https://arxiv.org/abs/2411.04191">https://arxiv.org/abs/2411.04191</a> Topological Modes in Monitored Quantum Dynamics (Chao-Ming Jian)</p>
 <p class="p1"><a href="https://arxiv.org/abs/2411.14448">https://arxiv.org/abs/2411.14448</a> Universal Graph Representation of Stabilizer Codes **** (Peter W. Shor)</p>
+<br>
+<p class="p1">20251111</p>
+<p class="p1"><a href="https://arxiv.org/abs/2511.07305">https://arxiv.org/abs/2511.07305</a> Persistence of the Berezinskii–Kosterlitz–Thouless transition with long-range couplings (Johannes Knolle)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2511.06176">https://arxiv.org/abs/2511.06176</a> Two variants of the friendship paradox: The condition for inequality between them (Sang Hoon Lee)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2511.06442">https://arxiv.org/abs/2511.06442</a> Metamagnetic Transition in Low-Dimensional Site-Decorated Quantum Heisenberg Ferrimagnets (A. M. Tsvelik)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2511.05786">https://arxiv.org/abs/2511.05786</a> Dual holography as functional renormalization group ***** (Ki-Seok Kim, Arpita Mitra, Debangshu Mukherjee, Seung-Jong Yoo)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2511.06198">https://arxiv.org/abs/2511.06198</a> Chiral Anomaly of Kogut-Susskind Fermion in (3 + 1)-dimensional Hamiltonian formalism</p>
+<p class="p1"><a href="https://arxiv.org/abs/2511.07402">https://arxiv.org/abs/2511.07402</a> The ideal limit of rhombohedral graphene: Interaction-induced layer-skyrmion lattices and their collective excitations (Tixuan Tan, Patrick J. Ledwith, Trithep Devakul)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2511.07319">https://arxiv.org/abs/2511.07319</a> Phases and properties of color superconductors</p>
+<p class="p1"><a href="https://arxiv.org/abs/2511.05649">https://arxiv.org/abs/2511.05649</a> Magnusian: Relating the Eikonal Phase, the On-Shell Action, and the Scattering Generator (Jung-Wook Kim)</p>
+<p class="p2"><br></p>
+<p class="p1">20251112</p>
+<p class="p1"><a href="https://arxiv.org/abs/2511.07527">https://arxiv.org/abs/2511.07527</a> Parametric Instabilities of Correlated Quantum Matter ***** (Gal Shavit, Gil Refael)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2511.07726">https://arxiv.org/abs/2511.07726</a> The pseudogap and strange metal states in the square-lattice Hubbard model: a comprehensive study</p>
+<p class="p1"><a href="https://arxiv.org/abs/2511.08584">https://arxiv.org/abs/2511.08584</a> Steady-states and response functions of the periodically driven O(N) scalar field theory ***** (Oriana K. Diessel, Subir Sachdev, Pietro M. Bonetti)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2511.07566">https://arxiv.org/abs/2511.07566</a> Superconductivity in the two-dimensional Hubbard model revealed by neural quantum states</p>
+<p class="p1"><a href="https://arxiv.org/abs/2511.08249">https://arxiv.org/abs/2511.08249</a> Cuprate Twistronics for Quantum Hardware</p>
+<p class="p2"><br></p>
+<p class="p1">20251113</p>
+<p class="p1"><a href="https://arxiv.org/abs/2511.09277">https://arxiv.org/abs/2511.09277</a> Quantum-droplet interferometry</p>
+<p class="p1"><a href="https://arxiv.org/abs/2511.08635">https://arxiv.org/abs/2511.08635</a> Dephasing-induced Quantum Hall Criticality in the Quantum Anomalous Hall system</p>
+<p class="p1"><a href="https://arxiv.org/abs/2511.08953">https://arxiv.org/abs/2511.08953</a> Introduction to the Modern Theory of Bose-Einstein Condensation, Superfluidity, and Superconductivity</p>
+<p class="p1"><a href="https://arxiv.org/abs/2511.09445">https://arxiv.org/abs/2511.09445</a> Interferometric Braiding of Anyons in Chern Insulators</p>
+<p class="p1"><a href="https://arxiv.org/abs/2511.08743">https://arxiv.org/abs/2511.08743</a> Quantum Symmetry and Geometry in Double-Scaled SYK ***</p>
+<p class="p1"><a href="https://arxiv.org/abs/2511.08858">https://arxiv.org/abs/2511.08858</a> Information Processing in Quantum Thermodynamic Systems: an Autonomous Hamiltonian Approach</p>
+<p class="p1"><a href="https://arxiv.org/abs/2511.09301">https://arxiv.org/abs/2511.09301</a> Infinite-component BF field theory: Nexus of fracton order, Toeplitz braiding, and non-Hermitian Amplification *****</p>
+<p class="p1"><a href="https://arxiv.org/abs/2511.08894">https://arxiv.org/abs/2511.08894</a> Thermal field theories coupled to curved spacetime</p>
+<p class="p2"><br></p>
+<p class="p1">20251114</p>
+<p class="p1"><a href="https://arxiv.org/abs/2511.10646">https://arxiv.org/abs/2511.10646</a> Ordinary lattice defects as probes of topology (Bitan Roy)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2511.09651">https://arxiv.org/abs/2511.09651</a> Non-abelian Geometric Quantum Energy Pump</p>
+<p class="p1"><a href="https://arxiv.org/abs/2511.09714">https://arxiv.org/abs/2511.09714</a> Geometry Induced Chiral Transport and Entanglement in AdS2 Background</p>
+<p class="p1"><a href="https://arxiv.org/abs/2511.09629">https://arxiv.org/abs/2511.09629</a> Superdiffusive transport protected by topology and symmetry in all dimensions (Chen Fang)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2511.09620">https://arxiv.org/abs/2511.09620</a> Cooling the Sachdev-Ye-Kitaev model using thermofield double states (Norman Y. Yao)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2511.09643">https://arxiv.org/abs/2511.09643</a> Functional renormalization group study of a dissipative Bose–Hubbard model</p>
+<p class="p1"><a href="https://arxiv.org/abs/2511.09625">https://arxiv.org/abs/2511.09625</a> Mutual information as a measure of renormalizability ***</p>
+<p class="p1"><a href="https://arxiv.org/abs/2511.09859">https://arxiv.org/abs/2511.09859</a> Learning of Statistical Field Theories ***</p>
+<p class="p1"><a href="https://arxiv.org/abs/2511.09758">https://arxiv.org/abs/2511.09758</a> Local arrows of time in quantum many-body systems **** (Andrew G. Yates, Jordan Cotler, Nishad Maskara, Mikhail D. Lukin)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2511.10189">https://arxiv.org/abs/2511.10189</a> Continuum limit of gauged tensor network states</p>
+<p class="p1"><a href="https://arxiv.org/abs/2511.10246">https://arxiv.org/abs/2511.10246</a> Direct Raman observation of the quantum metric in a quantum magnet ***</p>
+<p class="p1"><a href="https://arxiv.org/abs/2511.09639">https://arxiv.org/abs/2511.09639</a> Nonequilibrium Probes of Quantum Geometry in Gapless Systems</p>
+<p class="p1"><a href="https://arxiv.org/abs/2511.10503">https://arxiv.org/abs/2511.10503</a> From One to Two Dimensions: Magnetic Phases in Weakly Coupled Spin Ladders (Andrew J. Millis)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2511.10642">https://arxiv.org/abs/2511.10642</a> Supernematic *** (Dan Mao, Eun-Ah Kim)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2511.10162">https://arxiv.org/abs/2511.10162</a> Lectures on Carrollian Holography *****</p>
+<p class="p2"><br></p>
+<p class="p1">20251117</p>
+<p class="p1"><a href="https://arxiv.org/abs/2511.10954">https://arxiv.org/abs/2511.10954</a> Kapitza–Dirac interference of Higgs waves in superconductors (Alexander V. Balatsky)</p>
+<p class="p2"><br></p>
+<p class="p1">20251118</p>
+<p class="p1"><a href="https://arxiv.org/abs/2511.13176">https://arxiv.org/abs/2511.13176</a> Stochasticity-induced non-Hermitian skin criticality</p>
+<p class="p1"><a href="https://arxiv.org/abs/2511.12731">https://arxiv.org/abs/2511.12731</a> Kagome metals *****</p>
+<p class="p1"><a href="https://arxiv.org/abs/2511.12287">https://arxiv.org/abs/2511.12287</a> Enhanced coherence in the periodically driven two-dimensional XY model (Gil Refael, Patrick A. Lee, Eugene A. Demler)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2511.13696">https://arxiv.org/abs/2511.13696</a> Generalized Global Symmetries of TrMsTheories: Part II (Sergei Gukov, Po-Shen Hsin, Du Pei)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2511.13718">https://arxiv.org/abs/2511.13718</a> Bosonisation Cohomology: Spin Structure Summation in Every Dimension</p>
+<p class="p1"><a href="https://arxiv.org/abs/2511.12777">https://arxiv.org/abs/2511.12777</a> Sdim: A Qudit Stabilizer Simulator (Isaac H. Kim)</p>
+<p class="p2"><br></p>
+<p class="p1">20251119</p>
+<p class="p1"><a href="https://arxiv.org/abs/2511.14134">https://arxiv.org/abs/2511.14134</a> Topological transition induced by selective random defects on a honeycomb lattice (Yukitoshi Motome)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2511.13957">https://arxiv.org/abs/2511.13957</a> Friendship-paradox paradox: Do most people’s friends really have more friends than they do? (Sang Hoon Lee)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2511.14614">https://arxiv.org/abs/2511.14614</a> Non-Fermi-liquid behavior and Fermi-surface expansion induced by van Hove–driven ferromagnetic fluctuations: the D-TRILEX analysis</p>
+<p class="p1"><a href="https://arxiv.org/abs/2511.13821">https://arxiv.org/abs/2511.13821</a> Skeleton of isometric Tensor Network States for Abelian String-Net Models (Frank Pollmann, Michael Knap)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2511.13827">https://arxiv.org/abs/2511.13827</a> Optimizing two-dimensional isometric tensor networks with quantum computers</p>
+<p class="p1"><a href="https://arxiv.org/abs/2511.13838">https://arxiv.org/abs/2511.13838</a> Lessons from α-RuCl3 for pursuing quantum spin liquid physics in atomically thin materials *****</p>
+<p class="p2"><br></p>
+<p class="p1">20251120</p>
+<p class="p1"><a href="https://arxiv.org/abs/2511.14839">https://arxiv.org/abs/2511.14839</a> Exploring the Infrared Landscape of the SYK Model</p>
+<p class="p1"><a href="https://arxiv.org/abs/2511.14902">https://arxiv.org/abs/2511.14902</a> Spin-lattice coupling induced chiral phonons and their signature in Raman Circular Dichroism (Johannes Knolle, Natalia B. Perkins)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2511.15547">https://arxiv.org/abs/2511.15547</a> Non-Abelian Zero Modes in Fractional Quantum Hall-Superconductor Heterostructure</p>
+<p class="p1"><a href="https://arxiv.org/abs/2511.15708">https://arxiv.org/abs/2511.15708</a> Moir´e-induced gapped phases in twisted nodal superconductors (J. H. Pixley, Pavel A. Volkov)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2511.15224">https://arxiv.org/abs/2511.15224</a> Note on Logical Gates by Gauge Field Formalism of Quantum Error Correction *****</p>
+<p class="p1"><a href="https://arxiv.org/abs/2511.15528">https://arxiv.org/abs/2511.15528</a> Introductory Lectures on Resurgence *****</p>
+<p class="p2"><br></p>
+<p class="p1">20251121</p>
+<p class="p1"><a href="https://arxiv.org/abs/2511.16667">https://arxiv.org/abs/2511.16667</a> Strained hyperbolic Dirac fermions: Zero modes, flat bands, and competing orders (Bitan Roy)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2511.16141">https://arxiv.org/abs/2511.16141</a> Phonon Dichroisms Revealing Unusual Electronic Quantum Geometry</p>
+<p class="p1"><a href="https://arxiv.org/abs/2511.16328">https://arxiv.org/abs/2511.16328</a> Failure of the Goldstone Theorem for Vector Fields and Boundary-Mode Proliferation in Hyperbolic Lattices (Kai Sun)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2511.16284">https://arxiv.org/abs/2511.16284</a> Finite-temperature topological magnons in honeycomb ferromagnets with sublattice asymmetries</p>
+<p class="p1"><a href="https://arxiv.org/abs/2511.15938">https://arxiv.org/abs/2511.15938</a> A low-energy effective Hamiltonian for Landau quasiparticles</p>
+<p class="p1"><a href="https://arxiv.org/abs/2511.16496">https://arxiv.org/abs/2511.16496</a> c =−2 conformal field theory in quadratic band touching</p>
+<p class="p1"><a href="https://arxiv.org/abs/2511.16510">https://arxiv.org/abs/2511.16510</a> Out-of-equilibrium spinodal-like scaling behaviors at the thermal first-order transitions of three-dimensional q-state Potts models (Ettore Vicari)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2511.16086">https://arxiv.org/abs/2511.16086</a> Chiral Spin-Split Magnons in the Metallic Altermagnet CrSb ****</p>
+<p class="p1"><a href="https://arxiv.org/abs/2511.15783">https://arxiv.org/abs/2511.15783</a> Automorphism in Gauge Theories: Higher Symmetries and Transversal Non-Clifford Logical Gates (Po-Shen Hsin, Ryohei Kobayashi)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2511.16429">https://arxiv.org/abs/2511.16429</a> Order-by-disorder from Schwinger bosons in a frustrated honeycomb ferromagnet</p>
+<p class="p1"><a href="https://arxiv.org/abs/2511.16641">https://arxiv.org/abs/2511.16641</a> Stabilizing Fractional Chern States in Twisted MoTe2: Multi-band Correlations via Non-perturbative Renormalization Group (Andriy H. Nevidomskyy)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2511.15765">https://arxiv.org/abs/2511.15765</a> Parity anomalies in 2+1-dimensional Aharonov-Bohm type configurations</p>
+<p class="p1"><a href="https://arxiv.org/abs/2511.15953">https://arxiv.org/abs/2511.15953</a> Topological 5d N= 2 Gauge Theories: Mirror Symmetry and Langlands Duality of A∞-categories of Floer Homologies</p>
+<p class="p1"><a href="https://arxiv.org/abs/2511.16663">https://arxiv.org/abs/2511.16663</a> Worldline Localization (Changha Choi)</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 <!--<div style="font-size:75%" id="last">since 2014-12-31 / last update 2019-12-06</div>-->
