--- a/arxiv/2025_11_arxiv.html
+++ b/arxiv/2025_11_arxiv.html
@@ -196,6 +196,47 @@
 <p class="p1"><a href="https://arxiv.org/abs/2511.15765">https://arxiv.org/abs/2511.15765</a> Parity anomalies in 2+1-dimensional Aharonov-Bohm type configurations</p>
 <p class="p1"><a href="https://arxiv.org/abs/2511.15953">https://arxiv.org/abs/2511.15953</a> Topological 5d N= 2 Gauge Theories: Mirror Symmetry and Langlands Duality of A∞-categories of Floer Homologies</p>
 <p class="p1"><a href="https://arxiv.org/abs/2511.16663">https://arxiv.org/abs/2511.16663</a> Worldline Localization (Changha Choi)</p>
+<br>
+<p class="p1">20251124</p>
+<p class="p1"><a href="https://arxiv.org/abs/2511.16742">https://arxiv.org/abs/2511.16742</a> Liouvillian topology and non-reciprocal dynamics in open Floquet chains</p>
+<p class="p1"><a href="https://arxiv.org/abs/2511.17494">https://arxiv.org/abs/2511.17494</a> Fractional Chern insulator edges: crystalline effects and optical measurements</p>
+<p class="p1"><a href="https://arxiv.org/abs/2511.16738">https://arxiv.org/abs/2511.16738</a> Scalable Quantum Computational Science: A Perspective from Block-Encodings and Polynomial Transformations</p>
+<p class="p1"><a href="https://arxiv.org/abs/2511.16696">https://arxiv.org/abs/2511.16696</a> Coexistence of superconductivity and excitonic pairing in a doped-biased double-layer system</p>
+<p class="p1"><a href="https://arxiv.org/abs/2511.16721">https://arxiv.org/abs/2511.16721</a> Quasiparticle Variational Quantum Eigensolver (Yuxuan Wang)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2511.16746">https://arxiv.org/abs/2511.16746</a> Excited states from local effective Hamiltonians of matrix product states and their entanglement spectrum transition</p>
+<p class="p1"><a href="https://arxiv.org/abs/2511.17420">https://arxiv.org/abs/2511.17420</a> Measuring Anyonic Exchange Phases Using Two-Dimensional Coherent Spectroscopy (Wonjune Choi, Frank Pollmann)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2511.17466">https://arxiv.org/abs/2511.17466</a> A path to high temperature superconductivity via strong short range repulsion in spin polarized band (Zhiyu Dong, Patrick A. Lee)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2412.09537">https://arxiv.org/abs/2412.09537</a> Les Houches lectures on two-dimensional gravity and holography *****</p>
+<p class="p1"><a href="https://arxiv.org/abs/2511.16941">https://arxiv.org/abs/2511.16941</a> Unstable Particles in Quantum Field Theory ****</p>
+<p class="p2"><br></p>
+<p class="p1">20251125</p>
+<p class="p1"><a href="https://arxiv.org/abs/2511.18753">https://arxiv.org/abs/2511.18753</a> Strain-induced Berry phase in chiral superconductors *** (Canon Sun, Marcel Franz, Joseph Maciejko)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2511.17641">https://arxiv.org/abs/2511.17641</a> Thermodynamics + Natural Selection = Bayesian Inference (Seth Lloyd)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2511.17835">https://arxiv.org/abs/2511.17835</a> Kicked-Ising Quantum Battery</p>
+<p class="p1"><a href="https://arxiv.org/abs/2511.17697">https://arxiv.org/abs/2511.17697</a> Functional renormalization with interaction flows: A single-boson exchange perspective and application to electron-phonon systems ***</p>
+<p class="p1"><a href="https://arxiv.org/abs/2511.18644">https://arxiv.org/abs/2511.18644</a> Competition between charge-density-wave and superconducting orders on eight-leg square Hubbard cylinders (Hong-Chen Jiang, Thomas P. Devereaux, Steven A. Kivelson)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2511.18969">https://arxiv.org/abs/2511.18969</a> Web of Non-invertible Dualities for (2+1) Dimensional Models with Subsystem Symmetries **** (Andriy H. Nevidomskyy)</p>
+<p class="p2"><br></p>
+<p class="p1">20251126</p>
+<p class="p1"><a href="https://arxiv.org/abs/2511.20518">https://arxiv.org/abs/2511.20518</a> Magnetic Control of the Non-Hermitian Skin Effect in Two-Dimensional Lattices (Stefano Longhi)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2511.19616">https://arxiv.org/abs/2511.19616</a> Hidden Magnon Berry Curvature drives Vertical Magnon Transport</p>
+<p class="p1"><a href="https://arxiv.org/abs/2511.20608">https://arxiv.org/abs/2511.20608</a> From quantum geometry to non-linear optics and gerbes: Recent advances in topological band theory ***</p>
+<p class="p1"><a href="https://arxiv.org/abs/2511.19589">https://arxiv.org/abs/2511.19589</a> Topological BF Theory construction of twisted dihedral quantum double phases from spontaneous symmetry breaking (Zhi-Qiang Gao, Chunxiao Liu, Joel E. Moore)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2511.19597">https://arxiv.org/abs/2511.19597</a> Holographic duality between bulk topological order and boundary mixed-state order (Tsung-Cheng Lu, Yu-Jie Liu, Sarang Gopalakrishnan, Yizhi You)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2511.19793">https://arxiv.org/abs/2511.19793</a> Generalized Landau Paradigm for quantum phases and phase transitions **** (Xie Chen)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2511.20447">https://arxiv.org/abs/2511.20447</a> Single-hole spectral functions in 1D quantum magnets with different ground states (Anders W. Sandvik)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2511.20545">https://arxiv.org/abs/2511.20545</a> Tuning entanglement phases and topological memory in the measurement-only Kitaev model with single and multi-qubit checks (Onur Erten)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2511.19776">https://arxiv.org/abs/2511.19776</a> The Categorical ’t Hooft Expansion</p>
+<p class="p1"><a href="https://arxiv.org/abs/2511.19598">https://arxiv.org/abs/2511.19598</a> Berry’s phase on photonic quantum computers</p>
+<p class="p1"><a href="https://arxiv.org/abs/2111.03857">https://arxiv.org/abs/2111.03857</a> Ferromagnetism in tilted fermionic Mott insulators</p>
+<p class="p2"><br></p>
+<p class="p1">20251127</p>
+<p class="p1"><a href="https://arxiv.org/abs/2511.21685">https://arxiv.org/abs/2511.21685</a> Holographically Emergent Gauge Theory in Symmetric Quantum Circuits ***** (Akash Vijay1 and Jong Yeon Lee</p>
+<p class="p1"><a href="https://arxiv.org/abs/2511.20860">https://arxiv.org/abs/2511.20860</a> Defect Bootstrap: Tight Ground State Bounds in Spontaneous Symmetry Breaking Phases ***** (Michael G. Scheer,1 Nisarg Chadha,1 Da-Chuan Lu,1, 2 and Eslam Khalaf</p>
+<p class="p1"><a href="https://arxiv.org/abs/2511.21440">https://arxiv.org/abs/2511.21440</a> Antiferromagnetism and Kekulé valence bond order in the honeycomb optical Su-Schrieffer-Heeger-Hubbard model ***</p>
+<p class="p1"><a href="https://arxiv.org/abs/2511.21598">https://arxiv.org/abs/2511.21598</a> Unconventional orders in the maple-leaf ferro-antiferromagnetic Heisenberg model (Simon Trebst, Yasir Iqbal)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2511.21683">https://arxiv.org/abs/2511.21683</a> Mean-field Modelling of Moir´e Materials: A User’s Guide with Selected Applications to Twisted Bilayer Graphene ***** (Yves H. Kwan, Steven H. Simon, Siddharth A. Parameswaran)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2511.20747">https://arxiv.org/abs/2511.20747</a> Baby universe as logical qubits: information recovery in random encoding (Takato Mori, Beni Yoshida)</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 <!--<div style="font-size:75%" id="last">since 2014-12-31 / last update 2019-12-06</div>-->
