20251206_daily_arXiv_update

--- a/arxiv/2025_12_arxiv.html
+++ b/arxiv/2025_12_arxiv.html
@@ -44,6 +44,73 @@
 <a href="http://www.kaist.ac.kr/">Korea Advanced Institute of Science and Technology (KAIST)</a></span></div>-->
 <br>
 <p class="p1">20251201</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2511.22506">https://arxiv.org/abs/2511.22506</a></span> Replica Field Theory of Quantum Jumps Monitoring: Application to the Ising Chain</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2511.23027">https://arxiv.org/abs/2511.23027</a></span> Controlling Knot Topology in Magnetic Hopfions via Spin-orbit Torque (Yukitoshi Motome)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2511.23229">https://arxiv.org/abs/2511.23229</a></span> Controlling Dissipative Topology Through Floquet Driving: From Transient Diagnostics to Boundary States Isolation</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2511.21815">https://arxiv.org/abs/2511.21815</a></span> Obstruction to Ergodicity from Locality and U (1) Higher Symmetries on the Lattice (Ramanjit Sohal, Ruben Verresen)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2511.22129">https://arxiv.org/abs/2511.22129</a></span> Fermionic Non-invertible Symmetry Behind Supersymmetric ADE Solitons ***** (Sungjay Lee)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2511.22326">https://arxiv.org/abs/2511.22326</a></span> Incommensurate-Stabilized Fractional Chern Insulator in Alternating Twisted Trilayer Graphene</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2511.22577">https://arxiv.org/abs/2511.22577</a></span> Engineering the localization transition in a Charge-Kondo circuit (Cheolhee Han)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2511.22678">https://arxiv.org/abs/2511.22678</a></span> Symmetric Mass Generation ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2511.22796">https://arxiv.org/abs/2511.22796</a></span> Correlations between superconducting and resistive anisotropies (Harley D. Scammell, Mathias S. Scheurer)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2511.23045">https://arxiv.org/abs/2511.23045</a></span> Nonequilibrium dynamics of magnetic hopfions driven by spin-orbit torque (Yukitoshi Motome)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2511.22647">https://arxiv.org/abs/2511.22647</a></span> Tensor complex renormalization with generalized symmetry and topological bootstrap</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2511.22775">https://arxiv.org/abs/2511.22775</a></span> Frustration and chirality in three-dimensional trillium lattices: Insights and Perspectives *** (Kwang-Yong Choi)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2511.22303">https://arxiv.org/abs/2511.22303</a></span> Twisted (co)homology of non-orientable Weyl semimetals ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2511.22654">https://arxiv.org/abs/2511.22654</a></span> Out-of-Time-Order Correlator Spectroscopy</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.08248">https://arxiv.org/abs/2308.08248</a></span> Quantum geometry in superfluidity and superconductivity *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2511.22672">https://arxiv.org/abs/2511.22672</a></span> Noncommutative Geometry of Gravity, Strings and Fields: A Panoramic Overview *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2511.22241">https://arxiv.org/abs/2511.22241</a></span> High-energy behaviour of Fermi theory ***</p>
+<p class="p3"><br></p>
+<p class="p1">20251202</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2512.01863">https://arxiv.org/abs/2512.01863</a></span> Topological Order in Deep State (Liang Fu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2512.00382">https://arxiv.org/abs/2512.00382</a></span> Precise computation of universal corner entanglement entropy at 2+1 dimension: From Ising to Gaussian quantum critical points (Zi Yang Meng)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2512.01200">https://arxiv.org/abs/2512.01200</a></span> Role of Quantum Geometry in the Competition between Higgs Mode and Quasiparticles in Third-Harmonic Generation of Superconductors (Chang-geun Oh, Haruki Watanabe, Naoto Tsuji)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2512.01346">https://arxiv.org/abs/2512.01346</a></span> Floquet Chern Insulators and Radiation-Induced Zero Resistance in Irradiated Graphene (Youngjae Kim, Kwon Park)</p>
+<p class="p3"><br></p>
+<p class="p1">20251203</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2512.02100">https://arxiv.org/abs/2512.02100</a></span> The measurement-induced phase transition in strongly disordered spin chains (Yicheng Tang, Pradip Kattel, Arijeet Pal, Emil A. Yuzbashyan, J. H. Pixle)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2512.02684">https://arxiv.org/abs/2512.02684</a></span> Kaganov-Lifshitz-Tanatarov theory for tilted Dirac-cone materials: anisotropic heating form uniform light</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2512.02755">https://arxiv.org/abs/2512.02755</a></span> Reaching Sachdev-Ye-Kitaev physics by shaking the Hubbard model</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2512.02234">https://arxiv.org/abs/2512.02234</a></span> The O(N) Free-Scalar and Wilson-Fisher Conformal Field Theories on the Fuzzy Sphere **** (Yin-Chen He)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2512.02123">https://arxiv.org/abs/2512.02123</a></span> General Four-Loop Beta Function for Scalar-Fermion Theories in Three Dimensions (York Schröder, Emmanuel Stamou, Tom Steudtner, Max Uetrecht)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2512.02139">https://arxiv.org/abs/2512.02139</a></span> Generalizing fusion rules by shuffle: Symmetry-based classifications of nonlocal systems constructed from similarity transformations</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2512.02516">https://arxiv.org/abs/2512.02516</a></span> Improved Ising Meson Spectroscopy Simulation on a Noisy Digital Quantum Device (Johannes Knolle, Ying-Jer Kao)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2512.02637">https://arxiv.org/abs/2512.02637</a></span> Higgs physics in superconductors</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2512.03031">https://arxiv.org/abs/2512.03031</a></span> Information dynamics and symmetry breaking in generic monitored Z2-symmetric open quantum systems (Sagar Vijay, Matthew P. A. Fisher)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2512.02105">https://arxiv.org/abs/2512.02105</a></span> Anomalies on the Lattice, Homotopy of Quantum Cellular Automata, and a Spectrum of Invertible States (Alexander M. Czajka, Roman Geiko, Ryan Thorngren)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2512.02150">https://arxiv.org/abs/2512.02150</a></span> J1−J2 Triangular Lattice Antiferromagnet in a Magnetic Field (Cristian D. Batista, Oleg A. Starykh)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2512.02903">https://arxiv.org/abs/2512.02903</a></span> SYMMETRY TRANSFORMATION GROUP ARISING FROM THE LAPLACE-RUNGE-LENZ VECTOR</p>
+<p class="p3"><br></p>
+<p class="p1">20251204</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2512.03137">https://arxiv.org/abs/2512.03137</a></span> Strain Response as a Probe of Spinons in Quantum Spin Liquids (Leonid Levitov)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2512.03435">https://arxiv.org/abs/2512.03435</a></span> Unconventional Magneto-Optical Effects in Altermagnets</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2512.03814">https://arxiv.org/abs/2512.03814</a></span> Quantum Geometric Planar Magnetotransport: A Probe for Magnetic Geometry in Altermagnets (K. T. Law)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2512.03689">https://arxiv.org/abs/2512.03689</a></span> More is uncorrelated: Tuning the local correlations of SU(N) Fermi-Hubbard systems via controlled symmetry breaking</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2512.03395">https://arxiv.org/abs/2512.03395</a></span> Tensor renormalization group calculations of partition-function ratios</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2512.03149">https://arxiv.org/abs/2512.03149</a></span> A high-order regularized delta-Chebyshev method for computing spectral densities (J. H. Pixley)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2512.03368">https://arxiv.org/abs/2512.03368</a></span> Short-Range Modulated Electron Lattice and d-Wave Superconductivity in Cuprates: A Phenomenological Ginzburg–Landau Framework</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2512.03473">https://arxiv.org/abs/2512.03473</a></span> AMSB in Sp(Nc) Gauge Theories **** (Hitoshi Murayama)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2512.03171">https://arxiv.org/abs/2512.03171</a></span> A Mathematical Introduction to Geometric Quantization</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2512.02706">https://arxiv.org/abs/2512.02706</a></span> Lectures on Quantum Field Theory on a Quantum Computer *****</p>
+<p class="p3"><br></p>
+<p class="p1">20251205</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2512.05109">https://arxiv.org/abs/2512.05109</a></span> Global phase diagram of two-dimensional dirty hyperbolic Dirac liquids (Bitan Roy)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2512.05040">https://arxiv.org/abs/2512.05040</a></span> Geometric Data Science - Moduli spaces of real data under equivalences ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2512.04325">https://arxiv.org/abs/2512.04325</a></span> Local expression of fractional corner charges in obstructed atomic insulators and its application to vertex-transitive polyhedra with arbitrary genus *** (Shuichi Murakami)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2512.04150">https://arxiv.org/abs/2512.04150</a></span> Symmetry-enforced Fermi surfaces **** (Minho Luke Kim, Salvatore D. Pace, Shu-Heng Shao)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2512.04164">https://arxiv.org/abs/2512.04164</a></span> Quantum geometry and linear orbital response in arbitrary SU(2) representation</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2512.04798">https://arxiv.org/abs/2512.04798</a></span> Edge spin galvanic effect in altermagnets</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2512.05057">https://arxiv.org/abs/2512.05057</a></span> Axionic tunneling from a topological Kondo insulator **** (Eugene J. Mele, Piers Coleman)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2512.04155">https://arxiv.org/abs/2512.04155</a></span> Dissipative Yao-Lee Spin-Orbital Model: Exact Solvability and PT Symmetry Breaking</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2512.04649">https://arxiv.org/abs/2512.04649</a></span> Probing chiral topological states with permutation defects **** (Yarden Sheffer, Ruihua Fan, Ady Stern, Erez Berg, Shinsei Ryu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2512.04174">https://arxiv.org/abs/2512.04174</a></span> Deformed LDPC codes with spontaneously broken non-invertible duality symmetries *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2512.04180">https://arxiv.org/abs/2512.04180</a></span> 2D Helical Twist Controls Tricritical Point in an Interacting Majorana Chain</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2512.04626">https://arxiv.org/abs/2512.04626</a></span> Phase transitions on the dark side of the Gross-Neveu model ***** (Gabriel Osiander Rein, Fakher F. Assaad, Igor F. Herbut)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1112.1513">https://arxiv.org/abs/1112.1513</a></span> A Diagrammer’s Note on Superconducting Fluctuation Transport for Beginners: I. Conductivity and Thermopower *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2506.09156">https://arxiv.org/abs/2506.09156</a></span> Digital quantum simulation of the Kitaev quantum spin liquid **** (Seongjun Park, Eun-Gook Moon)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2512.04741">https://arxiv.org/abs/2512.04741</a></span> Spontaneous Symmetry Breaking and the Higgs Mechanism *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1008.4337">https://arxiv.org/abs/1008.4337</a></span> A Primer on Functional Methods and the Schwinger-Dyson Equations</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 <!--<div style="font-size:75%" id="last">since 2014-12-31 / last update 2019-12-06</div>-->
