--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@ My recent talk: <a href="https://meetings.aps.org/Meeting/MAR22/Event/433747">"F
 	</details><br>
 <a id="Full_CV" class="anchor_inpage"  style="text-decoration:none;color:var(--font-color)">pdf version of CV: </a><a href="CV/20251027_SangEun_Han_Curriculum_Vitae.pdf">here (updated at 2025/10/27)</a>
 <br>
-TA class materials: <a href="taclass.html">here</a>
+<!--TA class materials: <a href="taclass.html">here</a>--!>
 <br><br>
 <a href="https://scholar.google.com/citations?user=Yow78DwAAAAJ" class="publink">Publications on <img src="img/Google_Scholar_icon.svg" height="17px" style="vertical-align: sub;" alt="Google Scholar"><img src="img/Google_Scholar_logo.svg" height="17px" style="vertical-align: bottom;" alt="Google Scholar"></a><br>
 <a href="https://arxiv.org/a/0000-0003-3141-1964.html" class="publink">Publications on <img src="img/arXiv_logo.svg" height="17px" style="vertical-align: bottom;" alt="arXiv"></a><br>
