20260103_daily_arXiv_update

--- a/arxiv/2026_01_arxiv.html
+++ b/arxiv/2026_01_arxiv.html
@@ -44,6 +44,40 @@
 <a href="http://www.kaist.ac.kr/">Korea Advanced Institute of Science and Technology (KAIST)</a></span></div>-->
 <br>
 <p class="p1">20260101</p>
+<p class="p1"><a href="https://arxiv.org/abs/2512.24738">https://arxiv.org/abs/2512.24738</a> The disordered Su-Schrieffer-Heeger model</p>
+<p class="p1"><a href="https://arxiv.org/abs/2512.24668">https://arxiv.org/abs/2512.24668</a> Disentangle Intertwined Interactions in Correlated Charge Density Wave with Magnetic Impurities (Han Woong Yeom)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2512.24553">https://arxiv.org/abs/2512.24553</a> From Berry curvature to quantum metric: a new era of quantum geometry metrology for Bloch electrons in solids ***** (Bohm-Jung Yang)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2512.23724">https://arxiv.org/abs/2512.23724</a> Yu-Shiba-Rusinov bound states of exciton condensate (Jong Eun Han,Sang- Wook Cheong, Han Woong Yeom)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2512.23790">https://arxiv.org/abs/2512.23790</a> Superconductivity from phonon-mediated retardation in a single-flavor metal (Jay D. Sau, Sankar Das Sarma)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2512.24709">https://arxiv.org/abs/2512.24709</a> Fragile Topological Phases and Topological Order of 2D Crystalline Chern Insulators</p>
+<p class="p1"><a href="https://arxiv.org/abs/2512.23931">https://arxiv.org/abs/2512.23931</a> Helical Fermi Arc in Altermagnetic Weyl Semimetal</p>
+<p class="p1"><a href="https://arxiv.org/abs/2512.24269">https://arxiv.org/abs/2512.24269</a> Orbital magnetic octupole in crystalline solids and anomalous Hall response to a nonuniform electric field</p>
+<p class="p1"><a href="https://arxiv.org/abs/2512.24287">https://arxiv.org/abs/2512.24287</a> Geometry induced net spin polarization of d-wave altermagnets</p>
+<p class="p1"><a href="https://arxiv.org/abs/2512.24586">https://arxiv.org/abs/2512.24586</a> Open quantum theory of magnetoresistance in mesoscopic magnetic materials</p>
+<p class="p1"><a href="https://arxiv.org/abs/2512.24798">https://arxiv.org/abs/2512.24798</a> Non-Abelian Geometric Phases in Triangular Structures And Universal SU(2) Control in Shape Space</p>
+<p class="p1"><a href="https://arxiv.org/abs/2512.24184">https://arxiv.org/abs/2512.24184</a> High bosonic Bott index and transport of multi-band topological magnons</p>
+<p class="p1"><a href="https://arxiv.org/abs/2512.23962">https://arxiv.org/abs/2512.23962</a> Lectures on insulating and conducting quantum spin liquids ***** (Subir Sachdev)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2512.24418">https://arxiv.org/abs/2512.24418</a> Dissipation-Stabilized Quantum Revivals in a Non-Hermitian Lattice Gauge Theory (Jad C. Halimeh)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2512.23794">https://arxiv.org/abs/2512.23794</a> Ergodicity breaking meets criticality in a gauge-theory quantum simulator (Jad C. Halimeh)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2512.24469">https://arxiv.org/abs/2512.24469</a> Beyond chaos: fluctuations, anomalies and spontaneous stochasticity in fluid turbulence (Gregory L. Eyink, Nigel Goldenfeld)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2512.24495">https://arxiv.org/abs/2512.24495</a> Spectroscopy of Quantum Phase Slips: Visualizing Complex Real-Time Instantons (Alex Kamenev)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2512.23793">https://arxiv.org/abs/2512.23793</a> Quantum dynamics of perfect fluids</p>
+<p class="p1"><a href="https://arxiv.org/abs/2512.23917">https://arxiv.org/abs/2512.23917</a> Tensor Computing Interface: An Application-Oriented, Lightweight Interface for Portable High-Performance Tensor Network Applications</p>
+<p class="p1"><a href="https://arxiv.org/abs/2512.24050">https://arxiv.org/abs/2512.24050</a> Diffusive metal in a percolating Chern insulator</p>
+<p class="p1"><a href="https://arxiv.org/abs/2512.24225">https://arxiv.org/abs/2512.24225</a> Entropic order parameters and topological holography</p>
+<p class="p1"><a href="https://arxiv.org/abs/2512.24419">https://arxiv.org/abs/2512.24419</a> Generalized Level-Rank Duality, Holomorphic Conformal Field Theory, and Non-Invertible Anyon Condensation (Clay Córdova, Diego García-Sepúlveda, Jeffrey A. Harvey)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2512.24589">https://arxiv.org/abs/2512.24589</a> Hidden rotation symmetry of the Jordan-Wigner transformation and its application to measurement in quantum computation ***</p>
+<p class="p1"><a href="https://arxiv.org/abs/2512.24836">https://arxiv.org/abs/2512.24836</a> Symmetric mass generation as a multicritical point with enhanced symmetry *****</p>
+<p class="p1"><a href="https://arxiv.org/abs/2512.24076">https://arxiv.org/abs/2512.24076</a> Exactly Solvable Models Hosting Altermagnetic Quantum Spin Liquids *** (Subrata Mandal, Mathias S. Scheurer)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2512.24390">https://arxiv.org/abs/2512.24390</a> Les Houches Lectures Notes on Tensor Networks *****</p>
+<p class="p1"><a href="https://arxiv.org/abs/2512.25036">https://arxiv.org/abs/2512.25036</a> Perturbative Kondo destruction and global phase diagram of heavy fermion metals ***** (Yiming Wang, Shouvik Sur, Chia-Chuan Liu, Qimiao Si)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2512.25069">https://arxiv.org/abs/2512.25069</a> Classification of Interacting Topological Crystalline Superconductors in Three Dimensions and Beyond (Yang Qi)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2512.23954">https://arxiv.org/abs/2512.23954</a> Reentrant Superconductivity from Competing Spin-Triplet Instabilities ***</p>
+<p class="p1"><a href="https://arxiv.org/abs/2506.21890">https://arxiv.org/abs/2506.21890</a> Kinetic theories: from curved space to flat space ****</p>
+<p class="p1"><a href="https://arxiv.org/abs/2512.24929">https://arxiv.org/abs/2512.24929</a> Introduction to black hole thermodynamics ***</p>
+<p class="p1"><a href="https://arxiv.org/abs/2512.24984">https://arxiv.org/abs/2512.24984</a> The Supersymmetry of Cuts in Pure Gauge Theory and Gravity ***</p>
+<p class="p1"><a href="https://arxiv.org/abs/2512.25038">https://arxiv.org/abs/2512.25038</a> Anomalous (3+1)d Fermionic Topological Quantum Field Theories via Symmetry Extension ***(Zheyan Wan, Juven Wang)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2512.22327">https://arxiv.org/abs/2512.22327</a> Hawksmoor’s Ceiling, Mercator’s Projection and the Roman Pantheon (John Cardy)</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 <!--<div style="font-size:75%" id="last">since 2014-12-31 / last update 2019-12-06</div>-->
