--- a/index.html
+++ b/index.html
@@ -636,51 +636,51 @@ Theoretical Physics, Condensed matter physics, Strongly correlated systems, Quan
 	</div>
 	<div class="cvitemize"> <a id="invited" class="anchor_inpage"  style="text-decoration:none;color:var(--font-color)">Invited Talks</a> </div>
 	<ul><li><div>
-	<span class="cvitem"><div class="bouncing-text" style="display: inline-block;">
+	<span class="cvitem"><!--<div class="bouncing-text" style="display: inline-block;">
   <div class="sign3" style="display: inline-block;">W</div>
   <div class="sign1" style="display: inline-block;float: left;">N</div>
   <div class="sign2" style="display: inline-block;float: left;">E</div>
-  <div class="shadow"></div></div> Informal Theory Seminar at ISSP </span>
+  <div class="shadow"></div></div>--> Informal Theory Seminar at ISSP </span>
 	<span class="cvperiod">Feb. 2025</span>
 	</div>
 	<div class="cvitemcontent"> <a href="https://www.issp.u-tokyo.ac.jp/maincontents/seminar/all2_en.html?ptype=seminar&pid=26276">"Quantum impurity model for two-stage multipolar ordering and Fermi surface reconstruction"</a> </div>	
 
 	</li><li><div>
-	<span class="cvitem"><div class="bouncing-text" style="display: inline-block;">
+	<span class="cvitem"><!--<div class="bouncing-text" style="display: inline-block;">
   <div class="sign3" style="display: inline-block;">W</div>
   <div class="sign1" style="display: inline-block;float: left;">N</div>
   <div class="sign2" style="display: inline-block;float: left;">E</div>
-  <div class="shadow"></div></div> Condensed Matter Physics Seminar at KIAS </span>
+  <div class="shadow"></div></div>--> Condensed Matter Physics Seminar at KIAS </span>
 	<span class="cvperiod">Jan. 2025</span>
 	</div>
 	<div class="cvitemcontent"> <a href="https://kias.re.kr/kias/activities/seminars/view.do?seqno=PGN1720250113-0004&menuNo=404003&mjrcdnm=&sdate=2025-01-19&edate=&pageIndex=1">"Quantum impurity model for two-stage multipolar ordering and Fermi surface reconstruction"</a> </div>	
 
 	</li><li><div>
-	<span class="cvitem"><div class="bouncing-text" style="display: inline-block;">
+	<span class="cvitem"><!--<div class="bouncing-text" style="display: inline-block;">
   <div class="sign3" style="display: inline-block;">W</div>
   <div class="sign1" style="display: inline-block;float: left;">N</div>
   <div class="sign2" style="display: inline-block;float: left;">E</div>
-  <div class="shadow"></div></div> CTP Seminar at Seoul National University </span>
+  <div class="shadow"></div></div>--> CTP Seminar at Seoul National University </span>
 	<span class="cvperiod">Jan. 2025</span>
 	</div>
 	<div class="cvitemcontent"> "Quantum impurity model for two-stage multipolar ordering and Fermi surface reconstruction" </div>	
 
 	</li><li><div>
-	<span class="cvitem"><div class="bouncing-text" style="display: inline-block;">
+	<span class="cvitem"><!--<div class="bouncing-text" style="display: inline-block;">
   <div class="sign3" style="display: inline-block;">W</div>
   <div class="sign1" style="display: inline-block;float: left;">N</div>
   <div class="sign2" style="display: inline-block;float: left;">E</div>
-  <div class="shadow"></div></div> Condensed Matter Group Seminar at Hanyang University </span>
+  <div class="shadow"></div></div>--> Condensed Matter Group Seminar at Hanyang University </span>
 	<span class="cvperiod">Jan. 2025</span>
 	</div>
 	<div class="cvitemcontent"> "Quantum impurity model for two-stage multipolar ordering and Fermi surface reconstruction" </div>	
 
 	</li><li><div>
-	<span class="cvitem"><div class="bouncing-text" style="display: inline-block;">
+	<span class="cvitem"><!--<div class="bouncing-text" style="display: inline-block;">
   <div class="sign3" style="display: inline-block;">W</div>
   <div class="sign1" style="display: inline-block;float: left;">N</div>
   <div class="sign2" style="display: inline-block;float: left;">E</div>
-  <div class="shadow"></div></div> Physics Seminar at KAIST </span>
+  <div class="shadow"></div></div>--> Physics Seminar at KAIST </span>
 	<span class="cvperiod">Jan. 2025</span>
 	</div>
 	<div class="cvitemcontent"> <a href="https://physics.kaist.ac.kr/index.php?mid=p_news_event3&document_srl=17645">"Quantum impurity model for two-stage multipolar ordering and Fermi surface reconstruction"</a> </div>	
