20250116_daily_arXiv_update

--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@ My recent talk: <a href="https://meetings.aps.org/Meeting/MAR22/Event/433747">"F
 	<div class="cvitemize"> <a href="#publication" class="anchor_inpage"  style="text-decoration:none;color:var(--font-color)">Recent News</a> </div>
 	<ul><!--<li>Now I am looking for next position starting in (maybe) September 2023. Please contact me by email (se.han[at]utoronto.ca or sehan.physics[at]gmail.com) if you are interested in me.</li>
 	-->
+			<li><b>[Mar. 2025]</b> I will give a <a href="#contributed" style="text-decoration:none;color:var(--font-color)">contributed talk</a> <a href="https://summit.aps.org/smt/2026/events/MAR-A34/3" style="font-style: italic;">"Beyond one-loop: higher-order effects on Gross-Neveu-Yukawa tensorial criticality" (2026/03/16 08:24 AM, Meeting Room 404</a> at APS march meeting 2026, Denver, Colorado, USA.
 			<li><b>[Oct. 2025]</b> My paper <a href="https://journals.aps.org/prb/abstract/10.1103/n4vy-dl5v" style="font-style: italic;">"Beyond one-loop calculation: Higher-order effects on Gross-Neveu-Yukawa tensorial criticality"</a> has been published in <span style="font-style: italic;">Physical Review B</span> as a regular article</span>.
 			</li>
 			<li><b>[Oct. 2025]</b> My paper <a href="https://journals.aps.org/prb/abstract/10.1103/yrkv-42wd" style="font-style: italic;">"Fermi surface bosonization for non-Fermi liquids"</a> has been published in <span style="font-style: italic;">Physical Review B</span> as a regular article</span>.
